更新，没什么重要的。

--- a/src/main/webapp/front/jade/hello.jade
+++ b/src/main/webapp/front/jade/hello.jade
@@ -3,5 +3,5 @@ commonHeader
 hello
 div this is a div
     input(type='text')
-    span 请输入sdssss你好sssdsd
+    span 请输入sdssss你好sssdsdd!!
 a(href='hello2.html') hello2
