--- a/src/main/webapp/view/html/hello.html
+++ b/src/main/webapp/view/html/hello.html
@@ -2,7 +2,6 @@
 <script src="view/js/app.js"></script>
 <commonHeader></commonHeader>
 <hello></hello>
-
 <div>this is a div
-  <input type="text"/><span>请输入sdssss你好sssdsd</span>
+  <input type="text"/><span>请输入sdssss你好sssdsdd!!</span>
 </div><a href="hello2.html">hello2</a>
